--- a/src/rmd/pluck_cefi.Rmd
+++ b/src/rmd/pluck_cefi.Rmd
@@ -1,23 +1,33 @@
 ---
-title: "Pluck Tables from CEFI PDFs"
+title: |
+  <center> CEFI </center>
+  <center> Adult and Child Self and Observer </center>
+  <center> Parent, Teacher, and Self </center>
+date: "`r Sys.Date()`"
 params:
   patient: Biggie
   test:
     label: "CEFI"
-    value: [cefi_sr]
+    value: "cefi_self_12-18"
     input: select
     multiple: no
     choices:
-      - cefi_sr
-      - cefi_or
+      - cefi_self
+      - cefi_observer
+      - cefi_self_12-18
+      - cefi_parent_5-18
+      - cefi_teacher_5-18
   test_name:
     label: "Test Name:"
-    value: [CEFI Self-Report]
+    value: "CEFI Self 12-18"
     input: select
     multiple: no
     choices:
-      - CEFI Self-Report
-      - CEFI Observer-Report
+      - "CEFI Self"
+      - "CEFI Observer"
+      - "CEFI Self 12-18"
+      - "CEFI Parent"
+      - "CEFI Teacher"
   file:
     label: "No file selected"
     value: file
@@ -30,508 +40,502 @@ output:
     highlight: kate
 ---
 
-# CEFI SR/OR
-
 ## Setup
 
 ```{r setup, include = FALSE}
-library(dplyr)
-library(fs)
-library(hablar)
-library(here)
-library(knitr)
-library(magrittr)
-library(miniUI)
-library(readr)
-library(rJava)
-library(rmarkdown)
-library(shiny)
-library(tabulapdf)
-library(tibble)
-library(tidyr)
-library(bwu)
-library(rmdformats)
 # Set JAVA environment
 Sys.setenv(
   JAVA_HOME =
-    "/Library/Java/JavaVirtualMachines/graalvm-community-openjdk-22.0.1+8.1/Contents/Home"
+    "/Library/Java/JavaVirtualMachines/graalvm-jdk-22.0.1+8.1/Contents/Home"
 )
 options(java.parameters = "-Xmx16000m")
-# Set knitr options
 knitr::opts_chunk$set(
   root.dir = normalizePath("./"),
   echo = TRUE,
-  message = TRUE,
-  warning = FALSE,
+  message = FALSE,
+  warning = TRUE,
   error = TRUE
 )
+library(glue)
+library(here)
+library(knitr)
+library(pdftools)
+library(qs2)
+library(rmarkdown)
+library(rmdformats)
+library(shiny)
+library(snakecase)
+library(tabulapdf)
+library(tidyverse)
+library(xfun)
+library(yaml)
+library(bwu)
+library(NeurotypR)
 ```
 
-## Patient
+## Parameters
 
-```{r patient}
+```{r}
 patient <- params$patient
-```
-
-## Test
-
-Name of neuropsych test or rating scale.
-
-```{r test}
 test <- params$test
 test_name <- params$test_name
-```
-
-## Load PDF file and save as file.path
-
-```{r file}
-# file <- file.choose()
+pages <- params$pages
+# file <- file.path(file.choose())
 file <- file.path(params$file)
 ```
 
-## Pages
-
-```{r pages}
-pages <- params$pages
+```{r}
+if (params$test == "cefi_self") {
+  saveRDS(file, "cefi_self.rds")
+} else if (params$test == "cefi_observer") {
+  saveRDS(file, "cefi_observer.rds")
+} else if (params$test == "cefi_self_12-18") {
+  saveRDS(file, "cefi_self_12_18.rds")
+} else if (params$test == "cefi_parent_5-18") {
+  saveRDS(file, "cefi_parent_5_18.rds")
+} else if (params$test == "cefi_teacher_5-18") {
+  saveRDS(file, "cefi_teacher_5_18.rds")
+}
 ```
 
-## Write/Read PDF file.path
+## Areas
 
-```{r write-file}
-writeLines(file, here::here("pre_csv", paste0(test, ".pdf")))
+```{r}
+# get_areas <- tabulapdf::locate_areas(
+#   file = file,
+#   pages = pages,
+#   copy = TRUE
+# )
+
+# note: double check these areas
+if (params$test == "cefi_self" | params$test == "cefi_observer") {
+  areas <- list(
+    table1 = c(460, 34, 483, 578),
+    table2 = c(533, 34, 671, 578)
+  )
+} else if (params$test == "cefi_self_12-18") {
+  areas <- list(
+    table1 = c(458.6, 52.6, 472.5, 559.4), # OK
+    table2 = c(525.9, 54.9, 656.9, 557.1)
+  )
+} else if (params$test == "cefi_parent_5-18") {
+  areas <- list(
+    table1 = c(468, 52, 480, 559), # ok
+    table2 = c(534, 52, 678, 559)
+  )
+} else if (params$test == "cefi_teacher_5-18") {
+  areas <- list(
+    table1 = c(468.563, 53.0, 481.568, 557.9), # check
+    table2 = c(493.043, 50.49, 669.758, 559.98)
+  )
+}
 ```
 
-```{r read-file}
-# If need to read file directly
-# file <- readLines(here::here(patient, "pre_csv", paste0(test, ".pdf")))
-```
+## Extract Tables
 
-## Locate areas
-
-```{r areas-known}
-areas <- list(
-  table1 = c(460, 34, 483, 578),
-  table2 = c(533, 34, 671, 578)
-)
-```
-
-```{r save-areas}
-saveRDS(areas, here::here("pre_csv", paste0(test, "_areas.rds")))
-```
-
-```{r read-area}
-# areas <- readRDS(here::here(patient, "pre_csv", paste0(test, "_areas.rds")))
-```
-
-## Extract tables
-
-```{r extract}
-plucked_tables <- bwu::gpluck_extract_tables(
+```{r}
+extracted_tables <- tabulapdf::extract_tables(
   file = file,
   pages = pages,
   area = areas,
   guess = NULL,
-  method = "stream",
+  method = "decide", # stream, lattice
   output = "matrix"
 )
+
+# Save the extracted_tables object to a file in the 'data' folder
+qs2::qs_save(extracted_tables, file = paste0("data/extracted_tables_", test, ".qs"))
+
+# Load the extracted_tables object from the 'data' folder
+# extracted_tables <- qs2::qs_read(paste0("data/extracted_tables_", test, ".qs"))
 ```
 
-# Tidy Tables
-
-## CEFI Full Scale
-
-### Table 1 using base R
+## Functions
 
 ```{r}
-# Assuming you have plucked_tables and params already defined
+# Function to process the extracted tables
+process_cefi_tables <- function(cefi_data) {
+  table_list <- purrr::map(cefi_data, as.data.frame) |>
+    set_names(paste0("table", 1:length(cefi_data))) # Rename tables
 
-# Convert to data.frame
-df1 <- as.data.frame(plucked_tables[[1]])
+  list2env(table_list, .GlobalEnv) # Assign to global environment
+}
 
-# Rename columns
-colnames1 <- c("score", "ci_95", "percentile", "category")
-colnames(df1) <- colnames1
+# Loop over the list and write each matrix to a CSV file
+for (i in seq_along(extracted_tables)) {
+  write.csv(extracted_tables[[i]], file = paste0(test, "_", i, ".csv"), row.names = FALSE)
+}
 
-# Convert columns to double
-to_double <- c("score", "percentile")
-df1[to_double] <- lapply(df1[to_double], as.numeric)
+# convert columns
+convert_columns <- function(df) {
+  # Specify the columns to be converted to numeric
+  numeric_cols <- c("score", "percentile")
 
-# Add 'scale' column
-df1 <- transform(df1, scale = "")
-df1 <- df1[c("scale", "score", "ci_95", "percentile", "category")]
-```
+  # Convert specified columns to numeric
+  df[numeric_cols] <- lapply(df[numeric_cols], function(x) as.numeric(as.character(x)))
 
-```{r}
-# Modify 'score' value based on params$test
-if (params$test == "cefi_sr") {
-  df1[1, "scale"] <- "CEFI-SR Full Scale"
-} else {
-  df1[1, "scale"] <- "CEFI-OR Full Scale"
+  # Convert remaining columns to character
+  char_cols <- setdiff(names(df), numeric_cols)
+  df[char_cols] <- lapply(df[char_cols], as.character)
+
+  return(df)
+}
+
+# Function to replace "-" with NA and filter out rows with no real data
+filter_real_data <- function(table, key_columns) {
+  table <- table |>
+    mutate(across(all_of(key_columns), ~ if_else(. == "-", NA_character_, as.character(.)))) |>
+    mutate(across(all_of(key_columns), as.numeric)) |>
+    filter(rowSums(is.na(select(., all_of(key_columns)))) < length(key_columns))
+
+  return(table)
+}
+
+# Function to extract text from PDF
+get_text <- function(file) {
+  tryCatch(
+    {
+      txt <- pdftools::pdf_text(file) |>
+        stringr::str_split("\n") |>
+        unlist()
+      return(txt)
+    },
+    error = function(e) {
+      message("Error reading PDF: ", e)
+      return(NULL)
+    }
+  )
 }
 ```
 
-## CEFI Subscales
+## CEFI Full Scale (Table 1)
 
 ```{r}
-# Convert to data.frame
-df2 <- as.data.frame(plucked_tables[[2]])
+# Process tables
+process_cefi_tables(extracted_tables)
 
-# Rename columns
-colnames2 <- c("scale", "score", "ci_95", "percentile", "category", "diff_from_avg", "stat", "strength")
-colnames(df2) <- colnames2
+# Convert to tibble
+table1 <- data.frame(table1)
 
-# Convert columns to double
-to_double <- c("score", "percentile", "diff_from_avg")
-df2[to_double] <- lapply(df2[to_double], as.numeric)
+# Ensure column names are correct
+names(table1) <- c("score", "ci_95", "percentile", "category")
+
+# Add 'scale' column with empty strings
+table1 <- table1 |> dplyr::mutate(scale = "Full Scale")
+table1 <- table1[c("scale", "score", "ci_95", "percentile")]
+
+# Convert columns
+table1 <- convert_columns(df = table1)
 ```
+
+## CEFI Scales (Table 2)
 
 ```{r}
-# Modify 'scale' value based on params$test
-if (params$test == "cefi_sr") {
-  df2[1, "scale"] <- "CEFI-SR Attention"
-  df2[2, "scale"] <- "CEFI-SR Emotion Regulation"
-  df2[3, "scale"] <- "CEFI-SR Flexibility"
-  df2[4, "scale"] <- "CEFI-SR Inhibitory Control"
-  df2[5, "scale"] <- "CEFI-SR Initiation"
-  df2[6, "scale"] <- "CEFI-SR Organization"
-  df2[7, "scale"] <- "CEFI-SR Planning"
-  df2[8, "scale"] <- "CEFI-SR Self-Monitoring"
-  df2[9, "scale"] <- "CEFI-SR Working Memory"
-} else {
-  df2[1, "scale"] <- "CEFI-OR Attention"
-  df2[2, "scale"] <- "CEFI-OR Emotion Regulation"
-  df2[3, "scale"] <- "CEFI-OR Flexibility"
-  df2[4, "scale"] <- "CEFI-OR Inhibitory Control"
-  df2[5, "scale"] <- "CEFI-OR Initiation"
-  df2[6, "scale"] <- "CEFI-OR Organization"
-  df2[7, "scale"] <- "CEFI-OR Planning"
-  df2[8, "scale"] <- "CEFI-OR Self-Monitoring"
-  df2[9, "scale"] <- "CEFI-OR Working Memory"
-}
-```
+# Convert to tibble
+table2 <- data.frame(table2)
 
-## Select variables to keep
+# Remove empty columns from table2
+table2 <- table2 |>
+  dplyr::select_if(~ any(. != ""))
 
-```{r select}
-keep <- c("scale", "score", "ci_95", "percentile")
+# Ensure column names are correct
+names(table2) <- c("scale", "score", "ci_95", "percentile", "category", "diff_from_avg", "stat", "strength")
 
-# Selecting the columns in keep for both tables
-df1 <- df1[, keep, drop = FALSE]
-df2 <- df2[, keep, drop = FALSE]
+table2 <- table2 |>
+  dplyr::select(-c("diff_from_avg", "stat", "strength", "category"))
 
-# Binding rows
-df <- rbind(df1, df2)
-df
-```
+# Usage (assuming you have a dataframe named 'df')
+table2 <- convert_columns(df = table2)
 
-# Mutate Table Columns
-
-```{r mutate}
-# source(here::here("R", "gpluck_make_columns.R"))
-data <- df
-table <- bwu::gpluck_make_columns(
-  data = data,
-  test = params$test,
-  test_name = params$test_name,
-  raw_score = NA,
-  range = NA,
-  domain = "ADHD",
-  subdomain = "Executive Function",
-  narrow = NA,
-  pass = NA,
-  verbal = NA,
-  timed = NA,
-  test_type = "rating_scale",
-  score_type = "standard_score",
-  absort,
-  description = NA,
-  result = NA
+# Fix split rows issue in table2
+# First, create a vector of all expected scale names
+expected_scales <- c(
+  "Attention", "Emotion Regulation", "Flexibility", "Inhibitory Control",
+  "Initiation", "Organization", "Planning", "Self-Monitoring", "Working Memory"
 )
 
-table <-
-  dplyr::relocate(table,
-    c(test, test_name),
-    .before = scale
-  ) |>
-  dplyr::relocate(c(raw_score), .before = score)
+# Step 1: Find rows with NA scores that might contain parts of scale names
+na_rows <- which(is.na(table2$score))
+
+# Step 2: Fix split scale names by examining each NA row
+fixed_table2 <- table2
+if (length(na_rows) > 0) {
+  for (i in na_rows) {
+    # Check if this might be part of a scale name that got split
+    if (i < nrow(table2)) {
+      # Try to combine with next row to see if it makes a valid scale name
+      potential_scale <- paste(table2$scale[i], table2$scale[i + 1], sep = " ")
+
+      # Check if this matches any expected scale or part of it
+      for (expected_scale in expected_scales) {
+        if (grepl(potential_scale, expected_scale, fixed = TRUE) ||
+          potential_scale == expected_scale) {
+          # Found a match, update the scale name and move data from row i+1
+          fixed_table2$scale[i] <- expected_scale
+          fixed_table2$score[i] <- fixed_table2$score[i + 1]
+          fixed_table2$ci_95[i] <- fixed_table2$ci_95[i + 1]
+          fixed_table2$percentile[i] <- fixed_table2$percentile[i + 1]
+
+          # Mark row i+1 for removal
+          fixed_table2$scale[i + 1] <- "TO_REMOVE"
+          break
+        }
+      }
+    }
+  }
+
+  # Remove marked rows
+  fixed_table2 <- fixed_table2 |>
+    filter(scale != "TO_REMOVE")
+}
+
+# Special case for "Working Memory" which might be split across two rows
+working_memory_row <- which(fixed_table2$scale == "Working")
+if (length(working_memory_row) > 0 && working_memory_row[1] < nrow(fixed_table2)) {
+  next_row <- working_memory_row[1] + 1
+  if (fixed_table2$scale[next_row] == "Memory") {
+    fixed_table2$scale[working_memory_row[1]] <- "Working Memory"
+    fixed_table2$score[working_memory_row[1]] <- fixed_table2$score[next_row]
+    fixed_table2$ci_95[working_memory_row[1]] <- fixed_table2$ci_95[next_row]
+    fixed_table2$percentile[working_memory_row[1]] <- fixed_table2$percentile[next_row]
+    fixed_table2 <- fixed_table2[-next_row, ]
+  }
+}
+
+# Filter out any remaining rows with NA scores
+fixed_table2 <- fixed_table2 |>
+  dplyr::filter(!is.na(score))
+
+# Deduplicate by scale name (keep the first occurrence of each scale)
+fixed_table2 <- fixed_table2 |>
+  dplyr::group_by(scale) |>
+  dplyr::slice(1) |>
+  dplyr::ungroup()
+
+# Replace the original table2 with the fixed version
+table2 <- fixed_table2
+
+# Print the filtered table
+print(table1)
+print(table2)
+
+# Bind rows into full data.frame
+df <- rbind(table1, table2)
+```
+
+## Match with lookup table
+
+```{r eval = TRUE}
+library(readr)
+library(dplyr)
+
+# Load the lookup table
+lookup_table <- readr::read_csv("~/reports/neuropsych_lookup_table_combined.csv")
+
+# Merge the data with the lookup table
+df_merged <- dplyr::mutate(df, test = test) |>
+  dplyr::left_join(lookup_table, by = c("test" = "test", "scale" = "scale")) |>
+  dplyr::relocate(c(test, test_name), .before = scale)
+
+# add missing columns
+df_mutated <- bwu::gpluck_make_columns(
+  df_merged,
+  range = "",
+  result = "",
+  absort = NULL
+)
 ```
 
 ## Test score ranges
 
-```{r ranges}
-table <- bwu::gpluck_make_score_ranges(table, test_type = "rating_scale")
+```{r ranges, eval = TRUE}
+df_mutated <- df_mutated |>
+  dplyr::mutate(range = NULL) |>
+  bwu::gpluck_make_score_ranges(table = df_mutated, test_type = "rating_scale") |>
+  dplyr::relocate(c(range), .after = percentile)
 ```
 
-## Narrow subdomains
+## Glue results for each scale
 
-```{r narrow}
-if (params$test == "cefi_sr") {
-  table <-
-    dplyr::mutate(table,
-      narrow = dplyr::case_when(
-        scale == "CEFI-SR Full Scale" ~ "Overall Executive Function",
-        scale == "CEFI-SR Attention" ~ "Attention",
-        scale == "CEFI-SR Emotion Regulation" ~ "Emotion Regulation",
-        scale == "CEFI-SR Flexibility" ~ "Flexibility",
-        scale == "CEFI-SR Inhibitory Control" ~ "Inhibitory Control",
-        scale == "CEFI-SR Initiation" ~ "Initiation",
-        scale == "CEFI-SR Organization" ~ "Organization",
-        scale == "CEFI-SR Planning" ~ "Planning",
-        scale == "CEFI-SR Self-Monitoring" ~ "Self-Monitoring",
-        scale == "CEFI-SR Working Memory" ~ "Working Memory",
-        TRUE ~ as.character(narrow)
-      )
-    )
-} else {
-  table <-
-    dplyr::mutate(table,
-      narrow = dplyr::case_when(
-        scale == "CEFI-OR Full Scale" ~ "Overall Executive Function",
-        scale == "CEFI-OR Attention" ~ "Attention",
-        scale == "CEFI-OR Emotion Regulation" ~ "Emotion Regulation",
-        scale == "CEFI-OR Flexibility" ~ "Flexibility",
-        scale == "CEFI-OR Inhibitory Control" ~ "Inhibitory Control",
-        scale == "CEFI-OR Initiation" ~ "Initiation",
-        scale == "CEFI-OR Organization" ~ "Organization",
-        scale == "CEFI-OR Planning" ~ "Planning",
-        scale == "CEFI-OR Self-Monitoring" ~ "Self-Monitoring",
-        scale == "CEFI-OR Working Memory" ~ "Working Memory",
-        TRUE ~ as.character(narrow)
-      )
-    )
-}
-```
+```{r glue, eval = TRUE}
+# Get the rater type from params$test
+rater <- params$test |>
+  stringr::str_extract("self|observer|parent|teacher")
 
-## Scale descriptions
-
-```{r description}
-if (params$test == "cefi_sr") {
-  table <-
-    dplyr::mutate(table,
-      description = dplyr::case_when(
-        scale == "CEFI-SR Full Scale" ~
-          "overall level of executive functioning",
-        scale == "CEFI-SR Attention" ~
-          "i.e., avoid distractions, concentrate on tasks, and sustain attention",
-        scale == "CEFI-SR Emotion Regulation" ~
-          "i.e., control and manage emotions, including staying calm when handling small problems and reacting with the right level of emotion",
-        scale == "CEFI-SR Flexibility" ~
-          "i.e., adjust behavior to meet circumstances, including coming up with different ways to solve problems, changing behavior when needed, and being able to come up with new ways to reach a goal",
-        scale == "CEFI-SR Inhibitory Control" ~
-          "i.e., control behavior or impulses, including thinking about consequences before acting, maintaining self-control, and thinking before speaking",
-        scale == "CEFI-SR Initiation" ~
-          "i.e., begin tasks or projects on own, including starting tasks easily, being motivated, and taking the initiative when needed",
-        scale == "CEFI-SR Organization" ~
-          "i.e., manage personal effects, work, or multiple tasks, including organizing tasks and thoughts well, managing time effectively, and working neatly",
-        scale == "CEFI-SR Planning" ~
-          "i.e., develop and implement strategies to accomplish tasks, including planning ahead and making good decisions",
-        scale == "CEFI-SR Self-Monitoring" ~
-          "i.e., evaluate own behavior in order to determine when a different approach is necessary, including noticing and fixing mistakes, knowing when help is required, and understanding when a task is completed",
-        scale == "CEFI-SR Working Memory" ~
-          "i.e., keep information in mind that is important for knowing what to do and how to do it, including remembering important things, instructions, and steps",
-        TRUE ~ as.character(description)
-      )
-    )
-} else {
-  table <-
-    dplyr::mutate(table,
-      description = dplyr::case_when(
-        scale == "CEFI-OR Full Scale" ~
-          "overall level of executive functioning",
-        scale == "CEFI-OR Attention" ~
-          "i.e., avoid distractions, concentrate on tasks, and sustain attention",
-        scale == "CEFI-OR Emotion Regulation" ~
-          "i.e., control and manage emotions, including staying calm when handling small problems and reacting with the right level of emotion",
-        scale == "CEFI-OR Flexibility" ~
-          "i.e., adjust behavior to meet circumstances, including coming up with different ways to solve problems, changing behavior when needed, and being able to come up with new ways to reach a goal",
-        scale == "CEFI-OR Inhibitory Control" ~
-          "i.e., control behavior or impulses, including thinking about consequences before acting, maintaining self-control, and thinking before speaking",
-        scale == "CEFI-OR Initiation" ~
-          "i.e., begin tasks or projects on own, including starting tasks easily, being motivated, and taking the initiative when needed",
-        scale == "CEFI-OR Organization" ~
-          "i.e., manage personal effects, work, or multiple tasks, including organizing tasks and thoughts well, managing time effectively, and working neatly",
-        scale == "CEFI-OR Planning" ~
-          "i.e., develop and implement strategies to accomplish tasks, including planning ahead and making good decisions",
-        scale == "CEFI-OR Self-Monitoring" ~
-          "i.e., evaluate own behavior in order to determine when a different approach is necessary, including noticing and fixing mistakes, knowing when help is required, and understanding when a task is completed",
-        scale == "CEFI-OR Working Memory" ~
-          "i.e., keep information in mind that is important for knowing what to do and how to do it, including remembering important things, instructions, and steps",
-        TRUE ~ as.character(description)
-      )
-    )
-}
-```
-
-## Glue results
-
-```{r result}
-if (params$test == "cefi_sr") {
-  table <-
-    dplyr::mutate(table,
-      result = dplyr::case_when(
-        scale == "CEFI-SR Full Scale" ~ glue::glue(
-          "- {patient}'s self-reported {description} was {range}.\n"
-        ),
-        scale == "CEFI-SR Attention" ~ glue::glue(
-          "- {patient}'s self-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-SR Emotion Regulation" ~ glue::glue(
-          "- {patient}'s self-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-SR Flexibility" ~ glue::glue(
-          "- {patient}'s self-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-SR Inhibitory Control" ~ glue::glue(
-          "- {patient}'s self-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-SR Initiation" ~ glue::glue(
-          "- {patient}'s self-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-SR Organization" ~ glue::glue(
-          "- {patient}'s self-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-SR Planning" ~ glue::glue(
-          "- {patient}'s self-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-SR Self-Monitoring" ~ glue::glue(
-          "- {patient}'s self-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-SR Working Memory" ~ glue::glue(
-          "- {patient}'s self-reported {narrow} ({description}) was {range}.\n"
-        ),
-        TRUE ~ as.character(result)
-      )
-    )
-} else {
-  table <-
-    dplyr::mutate(table,
-      result = dplyr::case_when(
-        scale == "CEFI-OR Full Scale" ~ glue::glue(
-          "- {patient}'s observer-reported {description} was {range}.\n"
-        ),
-        scale == "CEFI-OR Attention" ~ glue::glue(
-          "- {patient}'s observer-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-OR Emotion Regulation" ~ glue::glue(
-          "- {patient}'s observer-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-OR Flexibility" ~ glue::glue(
-          "- {patient}'s observer-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-OR Inhibitory Control" ~ glue::glue(
-          "- {patient}'s observer-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-OR Initiation" ~ glue::glue(
-          "- {patient}'s observer-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-OR Organization" ~ glue::glue(
-          "- {patient}'s observer-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-OR Planning" ~ glue::glue(
-          "- {patient}'s observer-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-OR Self-Monitoring" ~ glue::glue(
-          "- {patient}'s observer-reported {narrow} ({description}) was {range}.\n"
-        ),
-        scale == "CEFI-OR Working Memory" ~ glue::glue(
-          "- {patient}'s observer-reported {narrow} ({description}) was {range}.\n"
-        ),
-        TRUE ~ as.character(result)
-      )
-    )
-}
-```
-
-# Finalize and save
-
-## Write/save CEFI csv file
-
-```{r save-csv}
-test <- params$test
-readr::write_csv(
-  table,
-  here::here("csv", paste0(test, ".csv")),
-  col_names = TRUE,
-  na = ""
+# Define the rater label based on the extracted rater type
+rater_labels <- c(
+  "self" = "self",
+  "observer" = "observer",
+  "parent" = "parent",
+  "teacher" = "teacher"
 )
+
+# Update the result column using the appropriate rater label
+df <- df_mutated |>
+  dplyr::mutate(
+    result = dplyr::case_when(
+      scale == "Full Scale" ~ glue::glue(
+        "In terms of executive functioning skills related to ADHD, {patient}'s {rater_labels[[rater]]}-reported {scale} score (measuring {description}) fell within the {range} range.\n\n"
+      ),
+      TRUE ~ glue::glue(
+        "- {patient}'s {rater_labels[[rater]]}-reported {scale} score ({description}) fell within the {range} range.\n\n"
+      )
+    )
+  )
+
+
+df <- df |>
+  dplyr::select(-description) |>
+  dplyr::relocate(absort, .after = result)
 ```
 
-## Pluck Text
+## Write out final csv
 
-```{r text}
-# save file as path
-file <- fs::as_fs_path(params$file)
+```{r write}
+# Make sure we're using the fully processed data.frame with all columns
+if (!exists("df") || ncol(df) <= 4) {
+  # If df wasn't properly updated in the results section, use df_mutated
+  writedf <- df_mutated
+} else {
+  writedf <- df
+}
+readr::write_excel_csv(writedf, here::here("data", "csv", paste0(test, ".csv")), col_names = TRUE)
+```
 
-# CEFI Self-Report
-if (params$test == "cefi_sr") {
+## Extract Text
+
+```{r}
+# CEFI Self
+if (params$test == "cefi_self") {
   ## extract text
-  get_text <- function(file) {
-    txt <- pdftools::pdf_text(file) |>
-      stringr::str_split("\n") |>
-      unlist()
+  cefi_self_txt <- get_text(file)
+  if (!is.null(cefi_self_txt)) {
+    # Replace long spaces with a column break symbol
+    cefi_self_squished <- stringr::str_replace_all(cefi_self_txt, "\\s{2,}", "- ") |>
+      stringr::str_remove_all(",")
+
+    # save as markdown
+    readr::write_lines(
+      cefi_self_squished,
+      here::here("cefi_self_text.md"),
+      sep = "\n"
+    )
   }
-  cefi_sr_txt <- pdftools::pdf_text(file) |>
-    stringr::str_split("\n") |>
-    unlist()
-  cefi_sr_txt
-
-  # Replace long spaces with a col break symbol
-  cefi_sr_squished <-
-    stringr::str_replace_all(cefi_sr_txt, "\\s{2,}", "- ") |>
-    stringr::str_remove_all(",")
-  cefi_sr_squished
-
-  # save as markdown
-  readr::write_lines(
-    cefi_sr_squished,
-    here::here("cefi_sr_text.md"),
-    sep = "\n"
-  )
-  # save as quarto
-  readr::write_lines(
-    cefi_sr_squished,
-    here::here("cefi_sr_text.qmd"),
-    sep = "\n"
-  )
-  # save as text
-  readr::write_lines(cefi_sr_squished,
-    here::here("cefi_sr_text.txt"),
-    sep = "\n"
-  )
-
-  # CEFI Observer-Report
-} else if (params$test == "cefi_or") {
+} else if (params$test == "cefi_self_12-18") {
   ## extract text
-  get_text <- function(file) {
-    txt <- pdftools::pdf_text(file) |>
-      stringr::str_split("\n") |>
-      unlist()
+  cefi_self_txt <- get_text(file)
+  if (!is.null(cefi_self_txt)) {
+    # Replace long spaces with a column break symbol
+    cefi_self_squished <- stringr::str_replace_all(cefi_self_txt, "\\s{2,}", "- ") |>
+      stringr::str_remove_all(",")
+
+    # save as markdown
+    readr::write_lines(
+      cefi_self_squished,
+      here::here("cefi_self_12-18_text.md"),
+      sep = "\n"
+    )
   }
-  cefi_or_txt <- pdftools::pdf_text(file) |>
-    stringr::str_split("\n") |>
-    unlist()
-  cefi_or_txt
+}
 
-  # Replace long spaces with a col break symbol
-  cefi_or_squished <-
-    stringr::str_replace_all(cefi_or_txt, "\\s{2,}", "- ") |>
-    stringr::str_remove_all(",")
-  cefi_or_squished
+# CEFI Observer
+if (params$test == "cefi_observer") {
+  ## extract text
+  cefi_observer_txt <- get_text(file)
+  if (!is.null(cefi_observer_txt)) {
+    # Replace long spaces with a column break symbol
+    cefi_observer_squished <- stringr::str_replace_all(cefi_observer_txt, "\\s{2,}", "- ") |>
+      stringr::str_remove_all(",")
 
-  # save as markdown
-  readr::write_lines(cefi_or_squished,
-    here::here("cefi_or_text.md"),
-    sep = "\n"
-  )
-  # save as quarto
-  readr::write_lines(cefi_or_squished,
-    here::here("cefi_or_text.qmd"),
-    sep = "\n"
-  )
-  # save as text
-  readr::write_lines(cefi_or_squished,
-    here::here("cefi_or_text.txt"),
-    sep = "\n"
-  )
+    # save as markdown
+    readr::write_lines(
+      cefi_observer_squished,
+      here::here("cefi_observer_text.md"),
+      sep = "\n"
+    )
+  }
+} else if (params$test == "cefi_observer_5-18") {
+  ## extract text
+  cefi_observer_txt <- get_text(file)
+  if (!is.null(cefi_observer_txt)) {
+    # Replace long spaces with a column break symbol
+    cefi_observer_squished <- stringr::str_replace_all(cefi_observer_txt, "\\s{2,}", "- ") |>
+      stringr::str_remove_all(",")
+
+    # save as markdown
+    readr::write_lines(
+      cefi_observer_squished,
+      here::here("cefi_observer_5-18_text.md"),
+      sep = "\n"
+    )
+  }
+}
+
+# CEFI Parent
+if (params$test == "cefi_parent") {
+  ## extract text
+  cefi_parent_txt <- get_text(file)
+  if (!is.null(cefi_parent_txt)) {
+    # Replace long spaces with a column break symbol
+    cefi_parent_squished <- stringr::str_replace_all(cefi_parent_txt, "\\s{2,}", "- ") |>
+      stringr::str_remove_all(",")
+
+    # save as markdown
+    readr::write_lines(
+      cefi_parent_squished,
+      here::here("cefi_parent_text.md"),
+      sep = "\n"
+    )
+  }
+} else if (params$test == "cefi_parent_5-18") {
+  ## extract text
+  cefi_parent_txt <- get_text(file)
+  if (!is.null(cefi_parent_txt)) {
+    # Replace long spaces with a column break symbol
+    cefi_parent_squished <- stringr::str_replace_all(cefi_parent_txt, "\\s{2,}", "- ") |>
+      stringr::str_remove_all(",")
+
+    # save as markdown
+    readr::write_lines(
+      cefi_parent_squished,
+      here::here("cefi_parent_5-18_text.md"),
+      sep = "\n"
+    )
+  }
+}
+
+# CEFI Teacher
+if (params$test == "cefi_teacher") {
+  ## extract text
+  cefi_teacher_txt <- get_text(file)
+  if (!is.null(cefi_teacher_txt)) {
+    # Replace long spaces with a column break symbol
+    cefi_teacher_squished <- stringr::str_replace_all(cefi_teacher_txt, "\\s{2,}", "- ") |>
+      stringr::str_remove_all(",")
+
+    # save as markdown
+    readr::write_lines(
+      cefi_teacher_squished,
+      here::here("cefi_teacher_text.md"),
+      sep = "\n"
+    )
+  }
+} else if (params$test == "cefi_teacher_5-18") {
+  ## extract text
+  cefi_teacher_txt <- get_text(file)
+  if (!is.null(cefi_teacher_txt)) {
+    # Replace long spaces with a column break symbol
+    cefi_teacher_squished <- stringr::str_replace_all(cefi_teacher_txt, "\\s{2,}", "- ") |>
+      stringr::str_remove_all(",")
+
+    # save as markdown
+    readr::write_lines(
+      cefi_teacher_squished,
+      here::here("cefi_teacher_5-18_text.md"),
+      sep = "\ n"
+    )
+  }
 }
 ```
+
+**THE END!!**
