--- a/_02-01_iq.qmd
+++ b/_02-01_iq.qmd
@@ -13,7 +13,7 @@ domains <- c("General Cognitive Ability")
 pheno <- "iq"
 
 # Read the CSV file into a data frame
-iq <- vroom::vroom("neurocog.csv")
+iq <- readr::read_csv("data/neurocog.csv")
 ```
 
 ```{r}
@@ -41,7 +41,6 @@ iq <- iq |>
     pass,
     verbal,
     timed,
-    description,
     result,
     z,
     z_mean_domain,
@@ -59,11 +58,13 @@ iq <- iq |>
   )
 
 # Write the resulting data frame to a new CSV file
-# The file name is created by concatenating the 'pheno' variable and ".csv"
-# NA values are replaced with an empty string in the output file
-# Column names are included in the output file
-# If the file already exists, it is overwritten (not appended)
-readr::write_excel_csv(iq, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
+readr::write_excel_csv(
+  iq,
+  here::here("data", paste0(pheno, ".csv")),
+  na = "",
+  col_names = TRUE,
+  append = FALSE
+)
 ```
 
 ```{r}
@@ -71,12 +72,7 @@ readr::write_excel_csv(iq, paste0(pheno, ".csv"), na = "", col_names = TRUE, app
 #| include: false
 #| eval: true
 
-# Read the data using the read_data function from the bwu library
-# The phenotype is specified by the 'pheno' variable
-data <- iq
-
 # Define the scales of interest
-# TODO: Add RBANS
 scales <- c(
   "Auditory Working Memory (AWMI)",
   "Cognitive Proficiency (CPI)",
@@ -103,6 +99,7 @@ scales <- c(
   "RBANS Total Index",
   "Test of Premorbid Functioning",
   "TOPF Standard Score",
+  "Total NAB Index (T-NAB)",
   "Verbal Comprehension (VCI)",
   "Verbal Comprehension",
   "Visual Perception/Construction",
@@ -110,13 +107,16 @@ scales <- c(
   "Vocabulary Acquisition (VAI)",
   "Word Reading",
   "Working Memory (WMI)",
-  "Working Memory"
+  "Working Memory",
+  "Attention Index (ATT)",
+  "Language Index (LAN)",
+  "Spatial Index (SPT)",
+  "Memory Index (MEM)",
+  "Executive Functions Index (EXE)"
 )
 
 # Filter the data using the filter_data function from the bwu library
-# The domain is specified by the 'domains' variable
-# The scale is specified by the 'scales' variable
-data_iq <- bwu::filter_data(data, domain = domains, scale = scales)
+data_iq <- bwu::filter_data(data = iq, domain = domains, scale = scales)
 ```
 
 ```{r}
@@ -165,6 +165,7 @@ subset <- c(
   "RBANS Total Index",
   "Test of Premorbid Functioning",
   "TOPF Standard Score",
+  "Total NAB Index (T-NAB)",
   "Verbal Comprehension (VCI)",
   "Verbal Comprehension",
   "Visual Perception/Construction",
@@ -172,7 +173,12 @@ subset <- c(
   "Vocabulary Acquisition (VAI)",
   "Word Reading",
   "Working Memory (WMI)",
-  "Working Memory"
+  "Working Memory",
+  "Attention Index (ATT)",
+  "Language Index (LAN)",
+  "Spatial Index (SPT)",
+  "Memory Index (MEM)",
+  "Executive Functions Index (EXE)"
 )
 
 # Filter the data to subset only the specified scales
@@ -185,58 +191,69 @@ vertical_padding <- 0
 multiline <- TRUE
 
 # footnotes
-fn_standard_score <- gt::md("Index score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
-fn_t_score <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
+fn_standard_score <- gt::md(
+  "Standard score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]"
+)
+
+source_note <- gt::md(
+  "Standard score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]"
+)
 
 # Define the groups for the table
 grp_iq <- list(
   standard_score = c(
-    "Composite Scores", "Test of Premorbid Functioning", "WAIS-IV", "WAIS-4",
-    "WASI-2", "WISC-5", "WISC-V", "WRAT-5", "KTEA-3", "NAB", "NAB-S", "RBANS", "WPPSI-IV"
+    "Composite Scores",
+    "Test of Premorbid Functioning",
+    "WAIS-5",
+    "WAIS-IV",
+    "WAIS-4",
+    "WASI-2",
+    "WISC-5",
+    "WISC-V",
+    "WRAT-5",
+    "KTEA-3",
+    "NAB",
+    "NAB-S",
+    "RBANS",
+    "WPPSI-IV"
   )
 )
 
-# Create the table using the tbl_gt function from the bwu library
-bwu::tbl_gt(
+# Create the table using the NeurotypR::tbl_gt2 function from the bwu library
+NeurotypR::tbl_gt(
   data = data_iq,
   pheno = pheno,
   table_name = table_name,
   vertical_padding = vertical_padding,
-  fn_standard_score = fn_standard_score,
-  fn_t_score = fn_t_score,
-  grp_standard_score = grp_iq[["standard_score"]],
-  grp_t_score = grp_iq[["t_score"]],
+  source_note = source_note,
+  # fn_standard_score = fn_standard_score,
+  # grp_standard_score = grp_iq[["standard_score"]],
   dynamic_grp = grp_iq,
   multiline = multiline
 )
 ```
 
 ```{r}
-#| label: fig-iq
+#| label: fig-iq-subdomain
 #| include: false
+#| eval: true
 #| fig-cap: "_Premorbid Ability_ is an estimate of an individual's intellectual functioning prior to known or suspected onset of brain disease or dysfunction. _General Ability_ is the overall skill to reason, solve problems, and gain useful knowledge. _Crystallized Knowledge_ involves understanding the world through language and reasoning. _Fluid Reasoning_ is the logical analysis and solution of new problems, identifying underlying patterns, and applying logic."
 
-# Define the x and y variables for the dotplot
-x <- data_iq$z
-y <- data_iq$scale
+# Define the x and y variables for the dotplot (as column names)
+x <- data_iq$z_mean_subdomain
+y <- data_iq$subdomain
 
 # plot args
 colors <- NULL
-return_plot <- Sys.getenv("RETURN_PLOT")
+return_plot <- TRUE
+filename <- "fig_iq_subdomain.svg"
 
-# Define the filename for the plot
-filename <- "fig_iq.svg"
-
-# Filter the data to keep only the specified scales
 # Define the scales to keep
 # keep <- c("General Ability", "Crystallized Knowledge", "Fluid Reasoning")
 # data_iq <- dplyr::filter(data_iq, scale %in% keep)
-
-# Suppress warnings from being converted to errors
-options(warn = 1) # Set warn to 1 to make warnings not halt execution
-
+# source("R/dotplot2_efficient.R")
 # Create the dotplot using the dotplot function from the bwu library
-bwu::dotplot(
+NeurotypR::dotplot2(
   data = data_iq,
   x = x,
   y = y,
@@ -245,15 +262,44 @@ bwu::dotplot(
   filename = filename,
   na.rm = TRUE
 )
+```
 
-# Reset warning options to default if needed
-options(warn = 0) # Reset to default behavior
+```{r}
+#| label: fig-iq-narrow
+#| include: false
+#| fig-cap: "_Premorbid Ability_ is an estimate of an individual's intellectual functioning prior to known or suspected onset of brain disease or dysfunction. _General Ability_ is the overall skill to reason, solve problems, and gain useful knowledge. _Crystallized Knowledge_ involves understanding the world through language and reasoning. _Fluid Reasoning_ is the logical analysis and solution of new problems, identifying underlying patterns, and applying logic."
+
+# Define the x and y variables for the dotplot (as column names)
+x <- data_iq$z_mean_narrow
+y <- data_iq$narrow
+
+# plot args
+colors <- NULL
+return_plot <- TRUE
+
+# Define the filename for the plot
+filename <- "fig_iq_narrow.svg"
+
+# Define the scales to keep
+# keep <- c("General Ability", "Crystallized Knowledge", "Fluid Reasoning")
+# data_iq <- dplyr::filter(data_iq, scale %in% keep)
+
+# Create the dotplot using the dotplot function from the NeurotypR package
+NeurotypR::dotplot2(
+  data = data_iq,
+  x = x,
+  y = y,
+  colors = colors,
+  return_plot = return_plot,
+  filename = filename,
+  na.rm = TRUE
+)
 ```
 
 ```{=typst}
 // Define a function to create a domain with a title, a table, and a figure
 #let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Roboto Slab", size: 0.5em)
+  let font = (font: "Roboto Slab", size: 0.7em)
   set text(..font)
   pad(top: 0.5em)[]
   grid(
@@ -263,33 +309,24 @@ options(warn = 0) # Reset to default behavior
       [#image(file_qtbl)],
       caption: figure.caption(position: top, [#title]),
       kind: "qtbl",
-      supplement: [Table],
+      supplement: [*Table*],
     ),
     figure(
       [#image(file_fig, width: auto)],
       caption: figure.caption(
         position: bottom,
-        [
-          _General Ability_ refers to an overall capacity to reason, to solve
-          problems, and to learn useful information. _Crystallized Knowledge_
-          involves understanding the world through language and reasoning.
-          _Fluid Reasoning_ is the logical analysis and solution of new
-          problems, identifying underlying patterns, and applying
-          logic.#footnote[In the figures presented here and below, scores have
-          been converted to _z_-scores, where an average score is 0 (zero) and the
-          standard deviation is 1.0. Any scores below the −1.0 ticks are
-          moderately concerning. Scores at or beyond the −2.0 ticks are
-          clinically signficant and a cause for greater concern.]
+        [#emph[_Premorbid Ability_] is an estimate of an individual's intellectual functioning prior to known or suspected onset of brain disease or dysfunction. Neurocognition is independent of intelligence and evaluates cognitive functioning across five domains\: Attention (focus, concentration, and information processing), Language (verbal communication, naming, comprehension, and fluency), Memory (immediate and delayed verbal and visual recall), Spatial (visuospatial perception, construction, and orientation), and Executive Functions (planning, problem-solving, and mental flexibility). #footnote[All scores in these figures have been standardized as z-scores. In this system: A z-score of 0.0 represents average performance; Each unit represents one standard deviation from the average; Scores between -1.0 and +1.0 fall within the normal range; Scores below -1.0 indicate below-average performance and warrant attention; and Scores at or below -2.0 indicate significantly impaired performance and are clinically concerning.]
         ],
       ),
       placement: none,
       kind: "image",
-      supplement: [Figure],
+      supplement: [*Figure*],
       gap: 0.5em,
     ),
   )
 }
 ```
+
 ```{=typst}
 // Define the title of the domain
 #let title = "General Cognitive Ability"
@@ -298,9 +335,22 @@ options(warn = 0) # Reset to default behavior
 #let file_qtbl = "table_iq.png"
 
 // Define the file name of the figure
-#let file_fig = "fig_iq.svg"
+#let file_fig = "fig_iq_subdomain.svg"
 
-// Call the 'domain' function with the specified title, table file name, and figure file name
 // The title is appended with ' Index Scores'
 #domain(title: [#title Scores], file_qtbl, file_fig)
 ```
+
+<!-- ```{=typst}
+// Define the title of the domain
+#let title = "General Cognitive Ability"
+
+// Define the file name of the table
+#let file_qtbl = "table_iq.png"
+
+// Define the file name of the figure
+#let file_fig = "fig_iq_narrow.svg"
+
+// The title is appended with ' Index Scores'
+#domain(title: [#title Scores], file_qtbl, file_fig)
+``` -->
