--- a/_02-02_academics.qmd
+++ b/_02-02_academics.qmd
@@ -44,7 +44,6 @@ academics <- academics |>
     pass,
     verbal,
     timed,
-    description,
     result,
     z,
     z_mean_domain,
@@ -66,7 +65,7 @@ academics <- academics |>
 # NA values are replaced with an empty string in the output file
 # Column names are included in the output file
 # If the file already exists, it is overwritten (not appended)
-readr::write_excel_csv(academics, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
+readr::write_excel_csv(academics, here::here("data", paste0(pheno, ".csv")), na = "", col_names = TRUE, append = FALSE)
 ```
 
 ```{r}
