--- a/_02-09_adhd_child.qmd
+++ b/_02-09_adhd_child.qmd
@@ -44,7 +44,6 @@ adhd <- adhd |>
     pass,
     verbal,
     timed,
-    description,
     result,
     z,
     z_mean_domain,
@@ -57,7 +56,7 @@ adhd <- adhd |>
 
 # Write the 'adhd' data frame to a CSV file
 # The file name is derived from the 'pheno' variable
-readr::write_excel_csv(adhd, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
+readr::write_excel_csv(adhd, here::here("data", paste0(pheno, ".csv")), na = "", col_names = TRUE, append = FALSE)
 ```
 
 ```{r}
