--- a/_02-10_emotion_child.qmd
+++ b/_02-10_emotion_child.qmd
@@ -43,7 +43,6 @@ emotion <- emotion |>
     pass,
     verbal,
     timed,
-    description,
     result,
     z,
     z_mean_domain,
@@ -56,7 +55,7 @@ emotion <- emotion |>
 
 # Write the 'emotion' data frame to a CSV file
 # The file name is derived from the 'pheno' variable
-readr::write_excel_csv(emotion, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
+readr::write_excel_csv(emotion, here::here("data", paste0(pheno, ".csv")), na = "", col_names = TRUE, append = FALSE)
 ```
 
 ```{r}
